chore(dependencies): Update composer.json with Redis extension
- Add ext-redis extension to composer.json dependencies
- Ensure Redis PHP extension is explicitly declared as a requirement
- Improve project compatibility and dependency management

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.30",
-        "predis/predis": "^3.2"
+        "predis/predis": "^3.2",
+        "ext-redis": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
